--- a/deck.mdx
+++ b/deck.mdx
@@ -27,32 +27,24 @@ export { default as theme } from './theme'
 ---
 
 import { Appear } from 'mdx-deck'
+import { TitleSplit } from './layouts'
 
-## Eigenschaften für Chatbots
+export default TitleSplit
 
-<Appear>
-  <ul>
-    <li>Gesprächsführung</li>
-    <li>Freitext</li>
-    <li>Funktionsumfang</li>
-  </ul>
-</Appear>
+## Eigenschaften und Bewertungskriterien
+
+- Gesprächsführung
+- Freitext
+- Funktionsumfang
+- ...
+
+* Zielerreichung
+* Einfachheit
+* Funktionen sind klar
+* ...
 
 ```notes
 - Was für Eigenschaften könnten einen Chatbot auszeichnen?
-```
-
-## Bewertungskriterien für Chatbots
-
-<Appear>
-  <ul>
-    <li>Zielerreichung</li>
-    <li>Einfachheit</li>
-    <li>Funktionen sind klar</li>
-  </ul>
-</Appear>
-
-```notes
 - Was für Bewertungskriterien könnten einen Chatbot auszeichnen?
 - Kategorisiert und Bewertet den Chatbot (Zweiergruppe)
 - 3min vorstellen
@@ -156,6 +148,8 @@ import { Appear } from 'mdx-deck'
 ---
 
 ## Vorstellen
+
+(3min je Gruppe)
 
 ---
 
