Weiter Slides hinzugefügt

--- a/deck.mdx
+++ b/deck.mdx
@@ -10,6 +10,16 @@ export { default as theme } from './theme'
 
 ---
 
+# Philip Schönholzer
+
+- Wohne in Luzern
+- Kommunikation und Informatik
+- Interaction Design
+- Mitgründer der Apptiva AG und Botfabrik
+- Viel unterwegs
+
+---
+
 ## Beispiele von Chatbots
 
 - [Geschenkidee.ch](https://www.geschenkidee.ch)
@@ -26,6 +36,33 @@ export { default as theme } from './theme'
 
 ---
 
+## Was ist ein Bot?
+
+---
+
+## Was ist ein Bot?
+
+- Ein Programm, dass eine Aufgabe selbständig ausführt
+- Ist lernfähig
+- Ist intelligent (?)
+- Findet eine Konversation statt, so wird von Chatbots gesprochen
+
+---
+
+## Warum Chatbots einsetzen?
+
+![](./channels.png)
+
+<small>Quelle: http://media-use-index.ch/assets/files/MUI2017.pdf</small>
+
+```notes
+- Smartphone ist das meistgenutzte Medium
+- Messaging ist die wichtigste App auf dem Smartphone
+- Chatbots sind dort wo die Nutzer sind
+```
+
+---
+
 import { Appear } from 'mdx-deck'
 import { TitleSplit } from './layouts'
 
@@ -33,19 +70,29 @@ export default TitleSplit
 
 ## Eigenschaften und Bewertungskriterien
 
-- Gesprächsführung
-- Freitext
-- Funktionsumfang
+- kleiner / grosser Umfang
+- eine Sprache / viele Sprachen
 - ...
 
 * Zielerreichung
 * Einfachheit
-* Funktionen sind klar
 * ...
 
 ```notes
-- Was für Eigenschaften könnten einen Chatbot auszeichnen?
-- Was für Bewertungskriterien könnten einen Chatbot auszeichnen?
+Eigenschaften
+- Bot führt / Besucher führt
+- Freitext / Fixe Antworten
+- FAQ / Assistent
+- einem / mehrere Kanäle
+- Gibt sich als Mensch / Bot aus
+- Nur Text / Bilder, Ton, Video
+
+Bewertungskriterien
+* Absichten korrekt verstanden
+* Funktionen sind klar
+* Fallback
+* Chatbot Challenge
+
 - Kategorisiert und Bewertet den Chatbot (Zweiergruppe)
 - 3min vorstellen
 ```
@@ -60,17 +107,21 @@ export default TitleSplit
 (3min je Gruppe)
 
 ```notes
-- Was für Bewertungskriterien könnten einen Chatbot auszeichnen?
-- Kategorisiert und Bewertet den Chatbot
+
 ```
 
 ---
 
 ## Einsatzmöglichkeiten von Chatbots
 
-```notes
-- Was sind Einsätzmöglichkeiten für Chatbots?
-```
+---
+
+## Einsatzmöglichkeiten von Chatbots
+
+- E-Commerce
+- Kundendienst
+- Marketing
+- Produktivität
 
 ---
 
@@ -95,10 +146,13 @@ export default TitleSplit
 
 <ul>
   <Appear>
-    <li>Einfach</li>
-    <li>Jederzeit</li>
-    <li>Persönlichkeit</li>
-    <li>Natürliche Interaktion</li>
+    <li>Bots sind super einfach zu bedienen</li>
+    <li>Können das Gespräch aktiv wieder aufnehmen</li>
+    <li>Geben nicht bloss Antwort, sondern führen Aktionen aus</li>
+    <li>Die persönlichste Form der Interaktion mit einer Maschine</li>
+    <li>Bots haben Persönlichkeit</li>
+    <li>Möglichkeit zu lernen was die Besucher wollen</li>
+    <li>Entwicklungsaufwand hält sich in Grenzen</li>
   </Appear>
 </ul>
 
