--- a/deck.mdx
+++ b/deck.mdx
@@ -142,7 +142,7 @@ Bewertungskriterien
 
 ---
 
-## Vorteile von Chatbots gegenüber anderen Kanälen
+## Vorteile von Chatbots gegenüber anderen interaktiven Medien
 
 <ul>
   <Appear>
@@ -192,12 +192,14 @@ Bewertungskriterien
 
 ## Bau einen Chatbot
 
-[www.dialogflow.com](www.dialogflow.com) (Ihr benötigt einen Google Account)
+[www.dialogflow.com](www.dialogflow.com)
+
+<small>Ihr benötigt einen Google Account</small>
 
 - Definiert das Ziel eures Chatbots bevor ihr mit dem Bauen beginnt
 - Verwende min. eine Absicht mit einer Entität
 - Baut den Chatbot (30min)
-- Andere Gruppe kategorisiert und bewertet (10min) euren Chatbot und stellt diesen vor (3min)
+- Einige Gruppe stellen ihren Chatbot vor (3min)
 
 ---
 
