--- a/deck.mdx
+++ b/deck.mdx
@@ -199,6 +199,8 @@ Bewertungskriterien
 - Definiert das Ziel eures Chatbots bevor ihr mit dem Bauen beginnt
 - Verwende min. eine Absicht mit einer Entität
 - Baut den Chatbot (30min)
+- Fragen, Austausch
+- Feinschliff
 - Einige Gruppe stellen ihren Chatbot vor (3min)
 
 ---
