--- a/deck.mdx
+++ b/deck.mdx
@@ -8,6 +8,8 @@ export { default as theme } from './theme'
 
 # Chatbots
 
+[PDF](presentation.pdf)
+
 ---
 
 # Philip Schönholzer
@@ -24,9 +26,8 @@ export { default as theme } from './theme'
 
 - [Geschenkidee.ch](https://www.geschenkidee.ch)
 - [Postfinance](https://www.postfinance.ch/de/privat/support/chat.html)
-- [Sanagate](https://www.sanagate.ch/de/home/ihre_vorteile/chatbot.html)
+- [Schweizer Parlament](https://www.parlament.ch/Documents/parli-d.html)
 - [Selma](https://www.selma.io/de)
-- [Coinbase](https://www.coinbase.com)
 - [Vorwerk Geschäftsbereicht](https://geschaeftsberichte.vorwerk.de/2017/fuehlen/)
 
 ```notes
