Added swica chatbot

--- a/deck.mdx
+++ b/deck.mdx
@@ -27,6 +27,7 @@ export { default as theme } from './theme'
 - [Geschenkidee.ch](https://www.geschenkidee.ch)
 - [Postfinance](https://www.postfinance.ch/de/privat/support/chat.html)
 - [Schweizer Parlament](https://www.parlament.ch/Documents/parli-d.html)
+- [Swica](https://www.swica.ch)
 - [Selma](https://www.selma.io/de)
 - [Vorwerk Geschäftsbereicht](https://geschaeftsberichte.vorwerk.de/2017/fuehlen/)
 
