--- a/deck.mdx
+++ b/deck.mdx
@@ -55,7 +55,7 @@ export const theme = themes.swiss
 </Steps>
 
 ---
-import channels from './channels.png'
+import channels from './channels-small.png'
 
 ## Warum Chatbots einsetzen?
 
