--- a/deck.mdx
+++ b/deck.mdx
@@ -10,11 +10,14 @@ export const theme = themes.swiss
 </Head>
 
 # Chatbots
+
 <small> ➜ Pfeiltasten zur nächsten Slide</small>
 
-<a style={{display: 'block', marginTop: '1em'}} href={pdf}>PDF</a>
+<a style={{ display: 'block', marginTop: '1em' }} href={pdf}>
+  PDF
+</a>
 
-<img src={bot} style={{display: 'block', width: '40%', height: '60%', marginLeft: 'auto'}} />
+<img src={bot} style={{ display: 'block', width: '40%', height: '60%', marginLeft: 'auto' }} />
 
 ---
 
@@ -29,23 +32,27 @@ export const theme = themes.swiss
 
 ## Beispiele von Chatbots
 
-- [Geschenkidee.ch](https://www.geschenkidee.ch)
-- [Postfinance](https://www.postfinance.ch/de/privat/support/chat.html)
-- [Roche Lehrstellen](https://www.roche.com/de/careers/country/switzerland/ch-your-job/lernende.htm)
+- [Post](https://www.post.ch/de/hilfe-und-kontakt)
+- [Postfinance](https://www.postfinance.ch/de/support.html)
 - [Swica](https://www.swica.ch)
-- [Selma](https://www.selma.io/de)
-- [Vorwerk Geschäftsbereicht](https://geschaeftsberichte.vorwerk.de/2017/fuehlen/)
+- [Selma](https://app.selma.com/de/signup)
+- [Geschenkidee.ch](https://www.geschenkidee.ch/donregalo)
 
 <Notes>
+
+
 - Wer kennt noch weitere Beispiele?
-- Schaut euch diese 15min an, um einen Eindruck der heutigen Chatbots zu erhalten
+- Schaut euch diese 5min an, um einen Eindruck der heutigen Chatbots zu erhalten
+
 </Notes>
+
 
 ---
 
 ## Was ist ein Bot?
 
 <Steps>
+
 
 - Ein Programm, dass eine Aufgabe selbständig ausführt
 - Ist lernfähig
@@ -54,8 +61,11 @@ export const theme = themes.swiss
 
 </Steps>
 
+
 ---
-import channels from './channels-small.png'
+
+import channels from './mediennutzung.jpg'
+import activity from './aktivitaeten.jpg'
 
 ## Warum Chatbots einsetzen?
 
@@ -63,13 +73,16 @@ import channels from './channels-small.png'
 - Messaging ist die wichtigste App auf dem Smartphone
 - Chatbots sind dort wo die Nutzer sind
 
-<img style={{ display: 'block', width: 500, height: 300}} src={channels} />
-
+<img style={{ width: 550, height: 330 }} src={channels} />
+<img style={{ width: 550, height: 330 }} src={activity} />
 
 <Notes>
-  - Smartphone ist das meistgenutzte Medium
-  - Messaging ist die wichtigste App auf dem Smartphone
-  - Chatbots sind dort wo die Nutzer sind
+
+
+- Smartphone ist das meistgenutzte Medium
+- Messaging ist die wichtigste App auf dem Smartphone
+- Chatbots sind dort wo die Nutzer sind
+
 </Notes>
 
 
@@ -83,28 +96,28 @@ import channels from './channels-small.png'
 
 ## Bewertungskriterien
 
-* Zielerreichung
-* Einfachheit
-* ...
+- Zielerreichung
+- Einfachheit
+- ...
 
 <Notes>
-  Eigenschaften
+
+
+- Eigenschaften
   - Bot führt / Besucher führt
   - Freitext / Fixe Antworten
-  - FAQ / Assistent
-  - einem / mehrere Kanäle
+  - FAQ / Assistent - einem / mehrere Kanäle
   - Gibt sich als Mensch / Bot aus
   - Nur Text / Bilder, Ton, Video
-  
-  Bewertungskriterien
-  
+- Bewertungskriterien
   - Absichten korrekt verstanden
   - Funktionen sind klar
   - Fallback
   - Chatbot Challenge
-  
-  * Kategorisiert und Bewertet den Chatbot (Zweiergruppe)
-  * 3min vorstellen
+- Weiter
+  - Kategorisiert und Bewertet den Chatbot (Zweiergruppe)
+  - 3min vorstellen
+
 </Notes>
 
 
@@ -123,6 +136,7 @@ import channels from './channels-small.png'
 
 <Steps>
 
+
 - E-Commerce
 - Kundendienst
 - Marketing
@@ -130,28 +144,34 @@ import channels from './channels-small.png'
 
 </Steps>
 
+
 ---
 
 ## Kanäle von Chatbots
 
 - Web
+- WhatsApp
 - Facebook Messenger
 - Skype
 - Skype for Business
 - Slack
 - Telegram
-- (Whatsapp)
 - Weitere exotische Messenger-Dienste
 
 <Notes>
-  - Auf was für Kanälen können Chatbots kommunizieren?
+
+
+- Auf was für Kanälen können Chatbots kommunizieren?
+
 </Notes>
+
 
 ---
 
 ## Vorteile von Chatbots gegenüber anderen interaktiven Medien
 
 <Steps>
+
 
 - Bots sind super einfach zu bedienen
 - Können das Gespräch aktiv wieder aufnehmen
@@ -163,9 +183,14 @@ import channels from './channels-small.png'
 
 </Steps>
 
+
 <Notes>
-  - Was sind die Vorteile von Chatbots gegenüber anderen Kanälen?
+
+
+- Was sind die Vorteile von Chatbots gegenüber anderen Kanälen?
+
 </Notes>
+
 
 ---
 
@@ -211,6 +236,7 @@ import channels from './channels-small.png'
 - Einige Gruppe stellen ihren Chatbot vor
 
 ---
+
 import convInterfaces from './conv-interfaces.jpeg'
 
 ## Klickbots
@@ -221,7 +247,7 @@ import convInterfaces from './conv-interfaces.jpeg'
 - Einfacher in allen Belangen
 - "Keine KI"
 
-<img style={{ display: 'block', width: 500, height: 300}}  src={convInterfaces} />
+<img style={{ display: 'block', width: 600, height: 360 }} src={convInterfaces} />
 
 ---
 
@@ -250,6 +276,7 @@ import convInterfaces from './conv-interfaces.jpeg'
 
 <Steps>
 
+
 - Chatbots gehören zu den einfachsten UIs
 - Chatbots können auf vielen Kanälen aktiv sein
 - Chatbots führen Konversationen und lösen Aktionen aus
@@ -257,6 +284,7 @@ import convInterfaces from './conv-interfaces.jpeg'
 - "Intelligente" Chatbots setzen NLP (Natürliche Sprachverarbeitung) ein
 
 </Steps>
+
 
 ---
 
