Fixed dialog flow link

--- a/deck.mdx
+++ b/deck.mdx
@@ -225,7 +225,7 @@ import activity from './aktivitaeten.jpg'
 
 ## Bau einen Freitext-Chatbot
 
-[www.dialogflow.com](www.dialogflow.com)
+[www.dialogflow.com](https://dialogflow.cloud.google.com/
 
 <small>Ihr benötigt einen Google Account</small>
 
